k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tacs-log-streamer
  namespace: tacs
spec:
  selector:
    app: tacs-log-streamer
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
